<?xml version="1.0" encoding="UTF-8" ?>

<resources>
    <string name="audiobook_not_open">No audiobook is currently open.</string>

    <string name="audiobook_toc_downloading_all_chapters">Downloading all chapters…</string>
    <string name="audiobook_toc_cancelling_all_chapters">Cancelling all downloads.</string>

    <string name="audiobook_player_remaining_time">%1$d hours %2$d minutes remaining in book</string>
    <string name="audiobook_player_remaining_time_minutes_only">%d minutes remaining in book</string>
    <string name="audiobook_player_remaining_time_seconds_only">%d seconds remaining in book</string>

    <string name="audiobook_part_download_stop_confirm">Stop downloading this book part?</string>
    <string name="audiobook_part_download_stop">Stop</string>
    <string name="audiobook_part_download_continue">Continue</string>

    <string name="audiobook_player_menu_playback_rate_title">Playback Rate</string>
    <string name="audiobook_player_menu_sleep_title">Set Your Sleep Timer</string>
    <string name="audiobook_player_menu_add_bookmark_title">Add Bookmark</string>
    <string name="audiobook_player_menu_toc_title">Table Of Contents</string>
    <string name="audiobook_player_menu_toc_title_bookmarks">Bookmarks</string>
    <string name="audiobook_player_menu_toc_title_chapters">Chapters</string>

    <string name="audiobook_player_sleep_end_of_chapter">End of chapter</string>
    <string name="audiobook_player_sleep_60">60:00</string>
    <string name="audiobook_player_sleep_45">45:00</string>
    <string name="audiobook_player_initial">00:00:00</string>
    <string name="audiobook_player_sleep_30">30:00</string>
    <string name="audiobook_player_sleep_15">15:00</string>
    <string name="audiobook_player_sleep_now">Now</string>
    <string name="audiobook_player_sleep_off">Off</string>

    <string name="audiobook_player_options_cancel">Cancel</string>

    <string name="audiobook_player_buffering">Buffering…</string>
    <string name="audiobook_player_waiting_network_denied">This chapter must be downloaded before playback can continue, and your current network settings do not permit downloading or streaming on this network.</string>
    <string name="audiobook_player_waiting_network_unavailable">This chapter must be downloaded before playback can continue, and networking is currently unavailable.</string>

    <string name="audiobook_player_error">An error occurred during playback. Error code: %1$s (%2$d)</string>

    <string name="audiobook_player_toc_track_n">Track %1$d</string>
    <string name="audiobook_player_toc_menu_refresh_all">Refresh All</string>
    <string name="audiobook_player_toc_menu_stop_all">Stop All Downloads</string>
    <string name="audiobook_player_toc_menu_stop_all_confirm">Stop all downloads?</string>
    <string name="audiobook_player_toc_menu_errors">Display download errors</string>

    <string name="audiobook_player_toc_bookmarks_empty">There are no bookmarks for this book</string>
    <string name="audiobook_player_toc_bookmarks_dialog_title_delete">Delete</string>
    <string name="audiobook_player_toc_bookmarks_dialog_message_delete">Are you sure you want to delete this bookmark?</string>
    <string name="audiobook_player_toc_bookmarks_error_deleting">There was an error deleting the bookmark</string>

    <string name="audiobook_player_downloading_minimal">Downloading…</string>
    <string name="audiobook_player_downloading">Downloading part %1$d…</string>
    <string name="audiobook_player_downloading_failed">Downloading part %1$d (and possibly others) failed.</string>

    <string name="audiobook_player_pause_reason_bluetooth">
      The player is currently paused because your Bluetooth audio device changed.
    </string>
    <string name="audiobook_player_pause_reason_focus">
      The player is currently paused because another application wanted to use the audio device.
    </string>
    <string name="audiobook_player_pause_sleep_timer">
      The player is currently paused because the sleep timer was activated.
    </string>

    <string name="audiobook_player_log_in">Log In</string>
    <string name="audiobook_player_login_expired">Playback has halted because your session has expired. Please log in to refresh your session.</string>

    <!--
      Accessibility strings.
      -->

    <string name="audiobook_accessibility_playback_rate_open">Open The Playback Rate Controls Drawer</string>
    <string name="audiobook_accessibility_playback_rate_close">Close The Playback Rate Controls Drawer</string>
    <string name="audiobook_accessibility_playback_rate_increase">Increase Playback Rate</string>
    <string name="audiobook_accessibility_playback_rate_decrease">Decrease Playback Rate</string>
    <string name="audiobook_accessibility_playback_rate_adjust">Adjust Playback Rate</string>

    <string name="audiobook_accessibility_hours">Hours</string>
    <string name="audiobook_accessibility_minutes">Minutes</string>
    <string name="audiobook_accessibility_seconds">Seconds</string>
    <string name="audiobook_accessibility_hour">Hour</string>
    <string name="audiobook_accessibility_minute">Minute</string>
    <string name="audiobook_accessibility_second">Second</string>
    <string name="audiobook_accessibility_remaining_in_chapter">Remaining In Chapter</string>
    <string name="audiobook_accessibility_elapsed_in_chapter">Elapsed In Chapter</string>

    <string name="audiobook_accessibility_navigation_back">Back</string>

    <string name="audiobook_accessibility_player_buffering">Player Is Buffering</string>

    <string name="audiobook_accessibility_player_time_current">%1$s Played</string>
    <string name="audiobook_accessibility_player_time_remaining">%1$s Remaining</string>

    <string name="audiobook_accessibility_menu_sleep_timer_icon">Set Your Sleep Timer</string>
    <string name="audiobook_accessibility_menu_sleep_timer_item_at_end_of_chapter">Sleep At End of File</string>
    <string name="audiobook_accessibility_menu_sleep_timer_item_in_60_minutes">Sleep In 60 Minutes</string>
    <string name="audiobook_accessibility_menu_sleep_timer_item_in_45_minutes">Sleep In 45 Minutes</string>
    <string name="audiobook_accessibility_menu_sleep_timer_item_in_30_minutes">Sleep In 30 Minutes</string>
    <string name="audiobook_accessibility_menu_sleep_timer_item_in_15_minutes">Sleep In 15 Minutes</string>
    <string name="audiobook_accessibility_menu_sleep_timer_item_off">Sleep Timer Off</string>
    <string name="audiobook_accessibility_menu_sleep_timer_item_now">Sleep Now</string>

    <string name="audiobook_accessibility_sleep_timer_description_end_of_chapter">Sleep At End of File</string>
    <string name="audiobook_accessibility_sleep_timer_description_off">Off</string>

    <string name="audiobook_accessibility_sleep_timer_currently">The Sleep Timer Is Currently Set To</string>
    <string name="audiobook_accessibility_sleep_timer_has_been_set">Sleep timer has been set to</string>
    <string name="audiobook_accessibility_sleep_timer_is_paused">The Sleep Timer Is Paused Because Playback Is Paused.</string>

    <string name="audiobook_accessibility_menu_playback_speed_icon">Set Your Playback Speed</string>
    <string name="audiobook_accessibility_menu_playback_speed_0p75">75 percent</string>
    <string name="audiobook_accessibility_menu_playback_speed_1">100 percent</string>
    <string name="audiobook_accessibility_menu_playback_speed_1p25">125 percent</string>
    <string name="audiobook_accessibility_menu_playback_speed_1p5">150 percent</string>
    <string name="audiobook_accessibility_menu_playback_speed_2">200 percent</string>

    <string name="audiobook_accessibility_playback_speed_currently">Playback Speed Is Currently Set To</string>
    <string name="audiobook_accessibility_playback_speed_set_to">Set Playback Speed To %1$s</string>
    <string name="audiobook_accessibility_playback_speed_has_been_set">Playback speed has been set to</string>
    <string name="audiobook_accessibility_playback_speed_is_selected">This Is The Currently Selected Playback Rate</string>

    <string name="audiobook_accessibility_forward_15">Fast forward 15 seconds</string>
    <string name="audiobook_accessibility_backward_15">Rewind 15 seconds</string>
    <string name="audiobook_accessibility_play">Play</string>
    <string name="audiobook_accessibility_pause">Pause</string>
    <string name="audiobook_accessibility_book_cover">Book cover</string>

    <string name="audiobook_accessibility_toc_track_n">Track %1$d</string>
    <string name="audiobook_accessibility_toc_chapter_is_current">Selected</string>
    <string name="audiobook_accessibility_toc_chapter_requires_download">File Must Be Downloaded Before It Can Be Played</string>
    <string name="audiobook_accessibility_toc_chapter_failed_download">File Has Failed To Download</string>
    <string name="audiobook_accessibility_toc_chapter_downloading">File Is Currently Downloading</string>
    <string name="audiobook_accessibility_toc_chapter_duration_is">Duration</string>

    <string name="audiobook_accessibility_toc_bookmark_date_is">Date</string>
    <string name="audiobook_accessibility_toc_bookmark_delete">Delete</string>
    <string name="audiobook_accessibility_toc_bookmark_offset_is">Offset</string>

    <string name="audiobook_accessibility_toc_error">Show Download Error Details</string>
    <string name="audiobook_accessibility_toc_refresh_all">Download All Files</string>
    <string name="audiobook_accessibility_toc_stop_all">Stop All File Downloads</string>
    <string name="audiobook_accessibility_toc_download">Download File %1$d</string>
    <string name="audiobook_accessibility_toc_retry">Retry Download Of File %1$d</string>
    <string name="audiobook_accessibility_toc_progress">Download Progress Of File %1$d is
    %2$d Percent. Click To Stop Download.</string>
    <string name="audiobook_accessibility_toc_selected">Selected File %1$d</string>

</resources>
