<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/player_menu_playback_rate"
        android:icon="@drawable/ic_speed_48"
        android:title="@string/audiobook_player_menu_playback_rate_title"
        app:actionLayout="@layout/player_menu_playback_rate_text"
        app:showAsAction="always" />

    <item
        android:id="@+id/player_menu_sleep"
        android:icon="@drawable/baseline_nightlight_round_24"
        android:title="@string/audiobook_player_menu_sleep_title"
        app:actionLayout="@layout/player_menu_sleep_text"
        app:showAsAction="always" />

    <item
        android:id="@+id/player_menu_add_bookmark"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/audiobook_player_menu_add_bookmark_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/player_menu_toc"
        android:icon="@drawable/ic_toc_48"
        android:title="@string/audiobook_player_menu_toc_title"
        app:showAsAction="always" />

</menu>