<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/playerRate"
    android:focusable="false"
    android:clickable="false"
    android:importantForAccessibility="no"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:focusable="false"
            android:clickable="false"
            android:importantForAccessibility="no"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/audiobook_player_menu_playback_rate_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/playerRateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="1.0x"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/playerRateButtonMinus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/player_rate_button"
            android:clickable="true"
            android:contentDescription="@string/audiobook_accessibility_playback_rate_decrease"
            android:focusable="true">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                android:src="@drawable/player_minus" />
        </FrameLayout>

        <SeekBar
            android:id="@+id/playerRateSeekBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:contentDescription="@string/audiobook_accessibility_playback_rate_adjust"
            android:max="200"
            android:min="50" />

        <FrameLayout
            android:id="@+id/playerRateButtonPlus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/player_rate_button"
            android:clickable="true"
            android:contentDescription="@string/audiobook_accessibility_playback_rate_increase"
            android:focusable="true">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                android:src="@drawable/player_plus" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/playerRate0p5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:text="0.5x" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/playerRate1p0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:text="1.0x" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/playerRate1p25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:text="1.25x" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/playerRate1p5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:text="1.5x" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/playerRate2p0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:text="2.0x" />

    </LinearLayout>

</LinearLayout>