<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/audioBookToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:padding="0dp"
        android:theme="@style/Palace.Legacy.ToolbarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back"
        app:popupTheme="@style/Palace.Legacy.ToolbarPopupTheme"
        tools:title="Placeholder" />

    <TextView
        android:id="@+id/playerBookTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/audioBookToolbar"
        tools:text="Very, very, very long placeholder text that should never be seen in practice." />

    <TextView
        android:id="@+id/playerBookAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerBookTitle"
        tools:text="Very, very, very long placeholder text that should never be seen in practice." />

    <TextView
        android:id="@+id/player_remaining_book_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:lines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerBookAuthor"
        tools:text="4 hr 56 min remaining" />

    <SeekBar
        android:id="@+id/player_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:progress="0"
        android:scaleY="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_remaining_book_time" />

    <TextView
        android:id="@+id/player_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/audiobook_player_initial"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_progress" />

    <TextView
        android:id="@+id/player_time_maximum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/audiobook_player_initial"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_progress" />

    <TextView
        android:id="@+id/playerChapterTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_progress"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_time"
        tools:text="Very, very, very long placeholder text that should never be seen in practice." />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/player_commands"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/player_play_button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/audiobook_accessibility_play"
            android:src="@drawable/baseline_play_arrow_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/PalacePrimaryForegroundColor" />

        <ImageView
            android:id="@+id/player_jump_backwards"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/audiobook_accessibility_backward_15"
            android:src="@drawable/round_replay_30_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/player_play_button"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/PalacePrimaryForegroundColor" />

        <ImageView
            android:id="@+id/player_jump_forwards"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/audiobook_accessibility_forward_15"
            android:src="@drawable/round_forward_30_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/player_play_button"
            app:tint="@color/PalacePrimaryForegroundColor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottom_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="player_commands,player_busy" />

    <ProgressBar
        android:id="@+id/player_busy"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="48dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/playerStatusArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintBottom_toTopOf="@id/playerDownloadStatusArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/playerStatusIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/player_status_error" />

        <TextView
            android:id="@+id/playerStatusText"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="Very, very, very, very, very, very, very, very, very, very, very, very, very long placeholder text that should never be seen in practice." />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerDownloadStatusArea"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bottom_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/playerDownloadMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            tools:text="A very very very very very very very very very very long download message."
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/playerDownloadProgressTotal"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            tools:progress="50"
            android:visibility="invisible"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/playerDownloadProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            tools:progress="25"
            android:visibility="invisible"
            tools:visibility="visible" />

    </LinearLayout>

    <ImageView
        android:id="@+id/player_cover"
        android:layout_width="256dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/audiobook_accessibility_book_cover"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_work_24"
        app:layout_constraintBottom_toTopOf="@id/playerStatusArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerChapterTitle" />

    <TextView
        android:id="@+id/playerDebugStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:alpha=".1"
        android:gravity="center"
        android:lines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Very, very, very long placeholder text that should never be seen in practice." />

</androidx.constraintlayout.widget.ConstraintLayout>
